# ChangeLog for profile directory
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.10003 2015/05/18 16:55:19 jlec Exp $
#
# This ChangeLog should include records for all changes in profiles directory.
# Only typo fixes which don't affect portage/repoman behaviour could be avoided
# here. If in doubt put a record here!

  18 May 2015; Justin Lecher <jlec@gentoo.org> desc/linguas.desc:
  Add locale used by scribus

  18 May 2015; Zac Medico <zmedico@gentoo.org> categories:
  Add dev-go category.

  17 May 2015; Markos Chandras <hwoarang@gentoo.org> desc/linguas.desc:
  Add tt_RU locale for the Tatar language locale for Russia. It's used by
  x11-misc/pcmanfm

  17 May 2015; Ben de Groot <yngwin@gentoo.org>
  +arch/powerpc/ppc32/package.mask, arch/powerpc/ppc32/use.mask:
  Fix Qt5 mask for ppc

  15 May 2015; Pacho Ramos <pacho@gentoo.org> arch/powerpc/use.stable.mask:
  Update use.stable.mask

  15 May 2015; Pacho Ramos <pacho@gentoo.org>
  arch/powerpc/package.use.stable.mask:
  package.use.stable.mask due to missing keywords

  15 May 2015; Pacho Ramos <pacho@gentoo.org> base/package.use.stable.mask:
  package.use.stable.mask ffmpeg for vice

  14 May 2015; Anthony G. Basile <blueness@gentoo.org> package.mask:
  No longer required by any packages in the tree. Maksed for removal in 30
  days.

  13 May 2015; Pacho Ramos <pacho@gentoo.org> base/package.use.stable.mask:
  texinfo-5 cannot be stabilized yet for gnat-gcc-4.6*

  13 May 2015; Sebastian Pipping <sping@gentoo.org> license_groups:
  Add just-added licensed AGPL-3+ to @GPL-COMPATIBLE and @OSI-APPROVED (where
  AGPL-3 is, already)

  13 May 2015; Patrice Clement <monsieurp@gentoo.org> package.mask:
  dev-java/xt masked for removal in 30 days.

  13 May 2015; Ian Delaney <idella4@gentoo.org> package.mask:
  dev-python/gevent-zeromq masked for removal in 30 days

  13 May 2015; Hans de Graaff <graaff@gentoo.org> updates/2Q-2015: