@@ -1,0 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST simple-tpm-pk11-0.03.tar.gz 25238 SHA256 0059064cb29900f0db8ce6163ef6aee17b2dcd095613c813dd53ad7f597bf141 SHA512 ed8a1d605bb21ae6abec426f32159882fef74ee7cbc7cdfa5b649a9947f10bad2b95354b2445f3f40dbd9d55803f9fc40fca02605d466e995083c7e9ca29bd8e WHIRLPOOL 1887c7d18a333319a99b28157f7d9b3bce83868154cd3496b8aec911d3d61b13678d0a0ceb143c65cb8addf625e68ccb4008d65af55f87b2bff27d0ac6dddd40
+EBUILD simple-tpm-pk11-0.03.ebuild 851 SHA256 64fd61f187ce1c3f1c2142d9939c45ceb72b1521d3238805d9199013dda14897 SHA512 bec7d9fda3584011b2cd95b5835d0c6834cbd078e57b108306627ea496fe9d5182968bc86dec52e86c8893109e4d90a2a3e1be23404225d37643c98a75d65805 WHIRLPOOL a85144f443c1af2a498a665fab98a6a36627b1291c7c4bb8437a344dec32556ec14bf07bbfc5aea8f33db19d674c61869447e18bba2ac1c60e2cea78ef26cc25
+MISC ChangeLog 394 SHA256 d70627d2ab19743d2b24c7a6ed589e92bbf290b57f3be5ca8c34e04eb12c0774 SHA512 a0729792e053ce6a44883d395c1af1c301f179308c2f2df858ff69b9823ab1cf7e6a17b3392387d023dc1ee002c203ae07317e7ed4128d8c34e0a976460b0682 WHIRLPOOL d0a321b4233836936a839ec4087d12a1cc48bba2141d0a9a017342db47a6370f714c77eafcdf82e10f750b0a9169b5f27a4b8b0270237966990663dd911bfae5
+MISC metadata.xml 297 SHA256 6cb29e047f0c5e015816462e23393d12e4d299adeb42ca6301a6c0a167cf585f SHA512 42b22a4b30b5f0304e7dcca108039014b61ffeaad901c6ef4f4aceee369af0455ff441e3d9329c9bccae9e1ce41d5c7725aea5727528df37f6a08b616ea7d6b7 WHIRLPOOL 9498a327ed403128db899d6b80e3202fb779372609bdef2e1af138e940f2d8c1a909398f3703aeddaf4d1901b4a297b6ce8f9beef02ce6631535bf1122a5fdb1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJVW6HaXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFMTYyREVBRDFDQ0REMTEzRjA0QjNENDky
+QkJFRDlDQjFBNjhFRjU1AAoJECu+2csaaO9VhZEP/3C+HtS1Z4yskywfejMtpxrt
+YBZT9iZR+OpETLNeuuXvUKCIm2D8Ypw/GLOex5DxAgL7lagyw0hBFOz8di1w/CVC
+djmTAwkO7VSCh15CddMVD27c6NqpwBx3nKCK21Al5W1sKTKbd5fcUt2O7gIU2ZhN
+Z+N/jdkgMyJcw7vFSnxMQNGGEaZH9/Jpm7RSg2K28BJKc69c2Q6KOg7J0MT30gfK
+gZBTFYDmT70BFJIm/8w7VHed6X5ljWvZb3Bd609EEISO34cL9uYSksPcppjP7ZY3
+nlZxCKroxZyWjDap75HrT8k6BApH01zZu7RYSJLW8G6Frbyv5unfY2F+fBfOoxDW
+1WiaLsUXGxXcRdb2KMgf6rw2M/tDPcXE1VXBw0Q7HsUS7xbIy6TqESyQpCPCsUNj
+oZWyrcw6b7PXeTzCTQhIBu8ak/5CvcgGr0TclGrGh1yUKo5szwkKaCZMxy0k6Vw5
+sT6Y9o7jeAg4i+d5hyrE2qmCHemctRSHijs49Xe4N5YLoxBQUBiJ9mZ0YyyQjdvK
+ge/hXXzGZZ6d4Egm0SEN3Rcn1rx8ZSx+y2NxNYi6Yg2l4WMCvyPIGd3Byk1a7nYj
+y0BrcyaBOuZvMvIjHnn+fQmMJiY8Su+zLzSQTFLjjKPfGE15NJMHPGlNuVCft7lP
+SOIbFE/nAP7McSQNoP5K
+=acBd
+-----END PGP SIGNATURE-----
