@@ -1,0 +1,12 @@
+DEFINED_PHASES=prepare
+DEPEND=app-crypt/tpm-tools[pkcs11] dev-libs/opencryptoki[tpm] app-crypt/trousers dev-libs/openssl:0= !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=Simple PKCS11 provider for TPM chips
+EAPI=5
+HOMEPAGE=https://github.com/ThomasHabets/simple-tpm-pk11
+KEYWORDS=~amd64
+LICENSE=Apache-2.0
+RDEPEND=app-crypt/tpm-tools[pkcs11] dev-libs/opencryptoki[tpm] app-crypt/trousers dev-libs/openssl:0= net-misc/openssh[-X509]
+SLOT=0
+SRC_URI=https://github.com/ThomasHabets/simple-tpm-pk11/archive/0.03.tar.gz -> simple-tpm-pk11-0.03.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=f9ee33733e2308d276190b2828b6bbf7
