@@ -1,0 +1,9 @@
+# ChangeLog for app-crypt/simple-tpm-pk11
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/simple-tpm-pk11/ChangeLog,v 1.1 2015/05/19 20:49:24 perfinion Exp $
+
+*simple-tpm-pk11-0.03 (19 May 2015)
+
+  19 May 2015; Jason Zaman <perfinion@gentoo.org> +metadata.xml,
+  +simple-tpm-pk11-0.03.ebuild:
+  new package, thanks to Kristian
