@@ -1,10 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.10003 2015/05/18 16:55:19 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.10004 2015/05/19 20:47:05 chewi Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  19 May 2015; James Le Cuirot <chewi@gentoo.org> package.mask:
+  dev-java/classworlds, dev-java/diablo-jdk, and dev-java/diablo-jre-bin have
+  been removed. I haven't forgotten about emul-linux-x86-java but not quite
+  ready to remove it yet.
 
   18 May 2015; Justin Lecher <jlec@gentoo.org> desc/linguas.desc:
   Add locale used by scribus
